# py-power-meter-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  default-config.toml  pyproject.toml  tbump.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: linting.yml  tests.yml
etc/: default-config.toml  landis-gyr-config.toml  logarex-config.toml  py-logarex-monitor.service  py-power-meter-monitor.service
py_logarex_monitor/: cli.py  config.py
py_logarex_monitor/commands/: monitor_serial.py
py_logarex_monitor/iec_62056_protocol/: block_check_character.py  data_block.py  iec_62056_21_messages.py  mode_c_state_machine.py  obis_data_block.py  obis_data_set.py
py_logarex_monitor/iec_62056_protocol/tests/: test_iec_62056_21_messages.py  test_obis_data_set.py
py_logarex_monitor/utils/: async_closing.py
py_logarex_monitor/workers/: iec_62056_data_serial_reader.py  iec_62056_obis_data_set_logger.py  iec_62056_obis_data_set_mqtt_logger.py
py_power_meter_monitor/: cli.py  config.py
py_power_meter_monitor/commands/: monitor_serial.py
py_power_meter_monitor/iec_62056_protocol/: data_block.py  errors.py  iec_62056_21_messages.py  mode_c_state_machine.py  obis_data_block.py  obis_data_set.py  transmission_speeds.py
py_power_meter_monitor/iec_62056_protocol/tests/: test_data_block.py  test_data_set.py  test_iec_62056_21_messages.py  test_obis_data_set.py
py_power_meter_monitor/workers/: iec_62056_data_serial_reader.py  iec_62056_obis_data_set_mqtt_logger.py
