[tool.poetry]
name = "py-power-meter-monitor"
version = "1.0.0"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"
include = ["etc/default-config.toml", "etc/logarex-config.toml"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.2"
pydantic = "^1.9.1"
tomlkit = "^0.7.2"
asyncio-mqtt = "^0.13.0"
async-timeout = "^3.0.1"
aioserial = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-watch = "^4.2.0"
pre-commit = "^2.20.0"
hypothesis = "^6.50.1"

[tool.poetry.scripts]
py-power-meter-monitor = "py_power_meter_monitor.cli:app"

[tool.black]
disable = ["C0330", "C0326"]
max-line-length = 88

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
